--- a/adaptive.css
+++ b/adaptive.css
@@ -13,6 +13,14 @@
     .container img{
       max-width: 200px;
     }
+    .back_to_top{
+        width: 50px;
+        height: 50px;
+    }
+    .callUs{
+        width: 70px;
+        height: 70px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
