--- a/adaptive.css
+++ b/adaptive.css
@@ -31,6 +31,14 @@
     .container img{
         max-width: 200px;
     }
+    .back_to_top{
+        width: 50px;
+        height: 50px;
+    }
+    .callUs{
+        width: 70px;
+        height: 70px;
+    }
 }
 
 @media only screen and (max-width: 480px) {
@@ -41,6 +49,14 @@
     .container img{
         max-width: 200px;
     }
+    .back_to_top{
+        width: 50px;
+        height: 50px;
+    }
+    .callUs{
+        width: 70px;
+        height: 70px;
+    }
 }
 
 @media only screen and (max-width: 320px) {
@@ -49,5 +65,13 @@
     }
     .container img{
         max-width: 200px;
+    }
+    .back_to_top{
+        width: 50px;
+        height: 50px;
+    }
+    .callUs{
+        width: 70px;
+        height: 70px;
     }
 }
