--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h1:hover {
 .documentWriteAbout{
     background-color: #daf8f8;
     font-size: 20px;
-    text-align: center;
+text-align: left;
 
 }
 .documentWriteNum{
@@ -165,6 +165,7 @@ th{
 td{
     padding: 20px;
     background: white;
+    text-align: center;
 }
 .documentList{
     display: flex;
