--- a/adaptive.css
+++ b/adaptive.css
@@ -18,7 +18,7 @@
         width: 70px;
         height: 70px;
     }
-    .callUs{
+    .callUs img{
         width: 100px;
         height: 100px;
     }
@@ -40,7 +40,7 @@
         width: 70px;
         height: 70px;
     }
-    .callUs{
+    .callUs img{
         width: 100px;
         height: 100px;
     }
@@ -61,7 +61,7 @@
         width: 70px;
         height: 70px;
     }
-    .callUs{
+    .callUs img{
         width: 100px;
         height: 100px;
     }
@@ -81,7 +81,7 @@
         width: 70px;
         height: 70px;
     }
-    .callUs{
+    .callUs img{
         width: 100px;
         height: 100px;
     }
