--- a/adaptive.css
+++ b/adaptive.css
@@ -7,7 +7,7 @@
     font-size: 20px;
     margin-top: 20px;
 }
-    .navLink1{
+    .navLink{
         display: none;
     }
 
@@ -31,7 +31,7 @@
         font-size: 16px;
         margin-top: 20px;
     }
-    .navLink1{
+    .navLink{
         display: none;
     }
 
@@ -55,7 +55,7 @@
         font-size: 18px;
         margin-top: 20px;
     }
-    .navLink1{
+    .navLink{
         display: none;
     }
     .container img{
@@ -77,7 +77,7 @@
     .headerLogo h1{
         font-size: 18px;
     }
-    .navLink1{
+    .navLink{
         display: none;
     }
     .container img{
