--- a/style.css
+++ b/style.css
@@ -68,22 +68,32 @@ h1:hover {
     margin: 10px 30px ;
 
 }
+.header_contact{
+    display: flex;
+    flex-direction: column;
+    color: #c9f51b;
+
+}
 /*nav*/
-.navLink1,
-.navLink2,
-.navLink3,
-.navLink4{
+nav{
+    display: flex;
+    justify-content: space-around;
+}
+.navLink{
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 auto;
     font-size: 16px;
     text-transform: uppercase;
-    color: #c9f51b;
+    padding-top: 10px;
+    background-color:#eafdfd ;
+    color: black;
+    text-align: center;
     text-decoration: none;
     transition: color .3s linear;
     position: relative;
 }
 .navLink:hover{
-    color: black;
+    color: #c9f51b;
     cursor: grab;
 }
 .navLink:after{
@@ -107,7 +117,7 @@ h1:hover {
 .intro{
     width: 100%;
     max-width: 1200px;
-    padding-top: 150px;
+    padding-top: 200px;
     margin: 0 auto;
     text-align: center;
 
@@ -143,6 +153,9 @@ p{
     font-size: 20px;
 text-align: left;
 
+}
+.aboutUs{
+    font-size: 20px;
 }
 .documentWriteNum{
     background-color:#daf8f8;
@@ -211,6 +224,12 @@ td{
     text-align: center;
     text-transform: uppercase;
     font-size: 18px;
+}
+.timeWork{
+    font-size: 16px;
+    margin-top: 30px;
+    margin-left: -60px;
+    text-transform: capitalize;
 }
 .foot{
     width: 100%;
