--- a/adaptive.css
+++ b/adaptive.css
@@ -9,6 +9,43 @@
 }
     .navLink{
         display: none;
+
+    }
+    .buttonGroup{
+        position: relative;
+        display: inline-block;
+        margin-left: 700px;
+
+    }
+    .mobiLink{
+        display: none;
+        position: absolute;
+        background-color: #153C3C;
+        min-width: 160px;
+        z-index: 1;
+
+    }
+    .buttonGroup:hover .mobiLink{
+        display: block;
+    }
+    .mobiLink a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .mobiLink a:hover{
+        background-color: #153C3C;
+    }
+    .mobiButton {
+        background-color: #153C3C;
+        width: 100px;
+        height: 20px;
+
+    }
+    .mobiButton img{
+        width: 60px;
+        height: 20px;
     }
 
     .container img{
@@ -33,6 +70,43 @@
     }
     .navLink{
         display: none;
+
+    }
+    .buttonGroup{
+        position: relative;
+        display: inline-block;
+        margin-left: 700px;
+
+    }
+    .mobiLink{
+        display: none;
+        position: absolute;
+        background-color: #153C3C;
+        min-width: 160px;
+        z-index: 1;
+
+    }
+    .buttonGroup:hover .mobiLink{
+        display: block;
+    }
+    .mobiLink a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .mobiLink a:hover{
+        background-color: #153C3C;
+    }
+    .mobiButton {
+        background-color: #153C3C;
+        width: 100px;
+        height: 20px;
+
+    }
+    .mobiButton img{
+        width: 60px;
+        height: 20px;
     }
 
     .container img{
@@ -57,6 +131,43 @@
     }
     .navLink{
         display: none;
+
+    }
+    .buttonGroup{
+        position: relative;
+        display: inline-block;
+        margin-left: 700px;
+
+    }
+    .mobiLink{
+        display: none;
+        position: absolute;
+        background-color: #153C3C;
+        min-width: 160px;
+        z-index: 1;
+
+    }
+    .buttonGroup:hover .mobiLink{
+        display: block;
+    }
+    .mobiLink a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .mobiLink a:hover{
+        background-color: #153C3C;
+    }
+    .mobiButton {
+        background-color: #153C3C;
+        width: 100px;
+        height: 20px;
+
+    }
+    .mobiButton img{
+        width: 60px;
+        height: 20px;
     }
     .container img{
         max-width: 200px;
@@ -79,6 +190,43 @@
     }
     .navLink{
         display: none;
+
+    }
+    .buttonGroup{
+        position: relative;
+        display: inline-block;
+        margin-left: 700px;
+
+    }
+    .mobiLink{
+        display: none;
+        position: absolute;
+        background-color: #153C3C;
+        min-width: 160px;
+        z-index: 1;
+
+    }
+    .buttonGroup:hover .mobiLink{
+        display: block;
+    }
+    .mobiLink a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .mobiLink a:hover{
+        background-color: #153C3C;
+    }
+    .mobiButton {
+        background-color: #153C3C;
+        width: 100px;
+        height: 20px;
+
+    }
+    .mobiButton img{
+        width: 60px;
+        height: 20px;
     }
     .container img{
         max-width: 200px;
