--- a/adaptive.css
+++ b/adaptive.css
@@ -4,7 +4,7 @@
 
 @media only screen and (max-width: 992px) {
 .headerLogo h1{
-    font-size: 20px;
+
     margin-top: 20px;
 }
     .navLink{
@@ -38,7 +38,7 @@
         background-color: #153C3C;
     }
     .mobiButton {
-        background-color: #153C3C;
+        background-color: white;
         width: 100px;
         height: 20px;
 
@@ -56,6 +56,14 @@
         height: 100px;
 
     }
+    .back_to_top::before{
+       height: 40px;
+
+    }
+    .back_to_top::after{
+        width: 30px;
+        height: 30px;
+    }
     .callUs img{
         width: 100px;
         height: 100px;
@@ -65,7 +73,7 @@
 
 @media only screen and (max-width: 768px) {
     .headerLogo h1{
-        font-size: 16px;
+
         margin-top: 20px;
     }
     .navLink{
@@ -99,7 +107,7 @@
         background-color: #153C3C;
     }
     .mobiButton {
-        background-color: #153C3C;
+        background-color: white;
         width: 100px;
         height: 20px;
 
@@ -116,6 +124,14 @@
         width: 100px;
         height: 100px;
 
+    }
+    .back_to_top::before{
+        height: 40px;
+
+    }
+    .back_to_top::after{
+        width: 30px;
+        height: 30px;
     }
     .callUs img{
         width: 100px;
@@ -126,7 +142,7 @@
 
 @media only screen and (max-width: 480px) {
     .headerLogo h1 {
-        font-size: 18px;
+
         margin-top: 20px;
     }
     .navLink{
@@ -151,7 +167,7 @@
         display: block;
     }
     .mobiLink a {
-        color: black;
+        color: #153C3C;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
@@ -160,7 +176,7 @@
         background-color: #153C3C;
     }
     .mobiButton {
-        background-color: #153C3C;
+        background-color: white;
         width: 100px;
         height: 20px;
 
@@ -177,6 +193,14 @@
         height: 100px;
 
     }
+    .back_to_top::before{
+        height: 40px;
+
+    }
+    .back_to_top::after{
+        width: 30px;
+        height: 30px;
+    }
     .callUs img{
         width: 100px;
         height: 100px;
@@ -186,7 +210,7 @@
 
 @media only screen and (max-width: 320px) {
     .headerLogo h1{
-        font-size: 18px;
+
     }
     .navLink{
         display: none;
@@ -219,7 +243,7 @@
         background-color: #153C3C;
     }
     .mobiButton {
-        background-color: #153C3C;
+        background-color: white;
         width: 100px;
         height: 20px;
 
@@ -234,6 +258,14 @@
     .back_to_top {
         width: 100px;
         height: 100px;
+    }
+    .back_to_top::before{
+        height: 40px;
+
+    }
+    .back_to_top::after{
+        width: 30px;
+        height: 30px;
     }
     .callUs img{
         width: 100px;
