--- a/adaptive.css
+++ b/adaptive.css
@@ -5,7 +5,9 @@
 @media only screen and (max-width: 992px) {
 .headerLogo h1{
 
-    margin-top: 20px;
+    margin-top: 5px;
+    font-size: 48px;
+    margin-left: 40px;
 }
     .navLink{
         display: none;
@@ -15,6 +17,27 @@
         position: relative;
         display: inline-block;
         margin-left: 700px;
+
+    }
+    .mobiButton{
+        display: block;
+        position: relative;
+        background-color: white;
+        width: 100px;
+        height: 40px;
+        margin-top: -10px;
+    }
+    .mobiButton span{
+        position: absolute;
+        top: 50%;
+        margin-top: -1px;
+        margin-left: -40px;
+        width:80px ;
+        height: 2px;
+        background-color:#153C3C ;
+    }
+    .mobiButton span::before,
+    .mobiButton span::after{
 
     }
     .mobiLink{
@@ -37,15 +60,13 @@
     .mobiLink a:hover{
         background-color: #153C3C;
     }
-    .mobiButton {
-        background-color: white;
-        width: 100px;
-        height: 20px;
-
-    }
     .mobiButton img{
         width: 60px;
         height: 20px;
+    }
+
+    .aboutUs{
+        font-size: 18px;
     }
 
     .container img{
@@ -74,8 +95,9 @@
 
 @media only screen and (max-width: 768px) {
     .headerLogo h1{
-
-        margin-top: 20px;
+        margin-top: 5px;
+        font-size: 48px;
+        margin-left: 40px;
     }
     .navLink{
         display: none;
@@ -117,6 +139,9 @@
         width: 60px;
         height: 20px;
     }
+    .aboutUs{
+        font-size: 18px;
+    }
 
     .container img{
         max-width: 200px;
@@ -144,8 +169,9 @@
 
 @media only screen and (max-width: 480px) {
     .headerLogo h1 {
-
-        margin-top: 20px;
+        margin-top: 5px;
+        font-size: 48px;
+        margin-left: 40px;
     }
     .navLink{
         display: none;
@@ -164,6 +190,9 @@
         min-width: 160px;
         z-index: 1;
 
+    }
+    .aboutUs{
+        font-size: 18px;
     }
     .buttonGroup:hover .mobiLink{
         display: block;
@@ -212,7 +241,9 @@
 
 @media only screen and (max-width: 320px) {
     .headerLogo h1{
-
+        margin-top: 5px;
+        font-size: 48px;
+        margin-left: 40px;
     }
     .navLink{
         display: none;
@@ -231,6 +262,9 @@
         min-width: 160px;
         z-index: 1;
 
+    }
+    .aboutUs{
+        font-size: 18px;
     }
     .buttonGroup:hover .mobiLink{
         display: block;
