--- a/adaptive.css
+++ b/adaptive.css
@@ -22,8 +22,8 @@
     .mobiButton{
         display: block;
         position: relative;
-        background-color: white;
-        width: 90px;
+        background-color: #153C3C;
+        width: 80px;
         height: 40px;
         margin-top: -10px;
     }
@@ -33,10 +33,10 @@
         position: absolute;
         top: 50%;
         margin-top: -1px;
-        margin-left: -40px;
-        width:80px ;
+        margin-left: -35px;
+        width:70px ;
         height: 2px;
-        background-color:#153C3C ;
+        background-color:#c9f51b ;
     }
     .mobiButton span::before,
     .mobiButton span::after{
