--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ h1:hover {
 
 }
 .header_contact{
+    margin-top: -30px;
     display: flex;
     flex-direction: column;
     text-decoration: none;
